[tool.poetry]
name = "hdmdata"
version = "1.0.0"
description = ""
authors = ["Danilo Paes <danilo.paes@pm.me>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "3.11.7"
pydantic = "^2.5.3"
sqlalchemy = "^2.0.25"
psycopg2 = "^2.9.9"
unidecode = "^1.3.7"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
alembic = "^1.13.1"
black = "^23.12.1"
coverage = "^7.4.0"


[tool.black]
line_length = 80
multi_line_output = 3
use_parentheses = true
include_trailing_comma = true
ensure_newline_before_comments = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
